fix(content): Added overflow for content-details

--- a/app/styles/less/content.less
+++ b/app/styles/less/content.less
@@ -115,6 +115,8 @@
     .content-details {
         padding: 40px 45px;
         margin-bottom: 3%;
+        max-height: 850px;
+        overflow: auto;
         background-color: @white;
         box-shadow: 0 0 .7rem 0 rgba(0,0,0,.15);
 
